Fixed the social bar on mobile

--- a/_includes/css/mobile.css
+++ b/_includes/css/mobile.css
@@ -16,8 +16,12 @@
 
 @media only screen and (max-width: 600px) {
 
+	body {
+		padding-bottom: 50px;
+	}
+
 	.social {
-		overflow: hidden;
+		overflow: show;
 		background-color: #edf3ff;
 		position: fixed;
 		bottom:0;
@@ -25,12 +29,12 @@
 		right: initial;
 		display: flex;
 		justify-content: space-around;
+		height: 50px;
 	}
 
 	.icons img {
-		margin-top: 25px;
-		height: 50px;
-	 	width: 50px;
+		height: 30px;
+	 	width: 30px;
 	}
 
 	#info {
